# kde-gdrive

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: CMakeLists.txt  org.kde.kdegdrive.desktop  org.nimbus.gdrive.desktop
src/: CMakeLists.txt  main.cpp
src/config/: Settings.cpp  Settings.h
src/core/: MountManager.cpp  MountManager.h  RcloneApiClient.cpp  RcloneApiClient.h  RcloneDaemon.cpp  RcloneDaemon.h  RcloneLocator.cpp  RcloneLocator.h
src/models/: MountsModel.cpp  MountsModel.h  RemotesModel.cpp  RemotesModel.h
src/qml/: AboutPage.qml  MainWindow.qml  OAuthWizard.qml  RemoteDetailPage.qml  SettingsPage.qml
src/sync/: BisyncManager.cpp  BisyncManager.h  LocalWatcher.cpp  LocalWatcher.h
src/ui/: MainWindow.cpp  MainWindow.h  OAuthWizard.cpp  OAuthWizard.h  TrayIcon.cpp  TrayIcon.h
