# --- Desktop file -----------------------------------------------------------
install(FILES org.nimbus.gdrive.desktop
    DESTINATION ${KDE_INSTALL_APPDIR}
)

# --- Appstream metadata (if available) --------------------------------------
# install(FILES org.kde.kdegdrive.metainfo.xml
#     DESTINATION ${KDE_INSTALL_METAINFODIR}
# )
